rebased main menu

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -2,110 +2,82 @@
 
 {% block content %}
 
-<div class="uk-position-relative uk-visible-toggle uk-light" style="width: 100%; margin: 15% auto 1% auto;"
-    tabindex="-1" uk-slideshow="min-height: 300; max-height: 400; animation: push" id="endstickness">
+<div uk-slideshow="animation: push; ratio: 7:3; autoplay: true; pause-on-hover: true; min-height: 300; max-height: 500"
+    style="margin-top: 15%">
 
-    <ul class="uk-slideshow-items" style="border-radius: 10px;">
+    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <li>
-            <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp"
-                alt="" uk-cover>
-        </li>
-        <li>
-            <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp"
-                alt="" uk-cover>
-        </li>
-        <li>
-            <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp"
-                alt="" uk-cover>
-        </li>
-    </ul>
+        <ul class="uk-slideshow-items">
+            <li>
+                <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp"
+                    alt="" uk-cover>
+                <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
+                    style="margin-left: 30%; ">
 
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
-        uk-slideshow-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
-        uk-slideshow-item="next"></a>
+                    <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
+
+                    <p style="font-size: 5rem; color: white" class="uk-margin uk-text-capitalize">название бренда</p>
+
+                    <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
+                        href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
+                </div>
+            </li>
+            <li>
+                <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp"
+                    alt="" uk-cover>
+                <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
+                    style="margin-left: 30%; ">
+
+                    <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
+
+                    <p style="font-size: 5rem; color: white" class="uk-margin-remove uk-text-capitalize">название бренда
+                    </p>
+
+                    <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
+                        href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
+                </div>
+            </li>
+            <li>
+                <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp"
+                    alt="" uk-cover>
+                <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
+                    style="margin-left: 30%; ">
+
+                    <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
+
+                    <p style="font-size: 5em; color: white" class="uk-margin uk-text-capitalize">название бренда</p>
+
+                    <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
+                        href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
+                </div>
+            </li>
+        </ul>
+
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+            uk-slideshow-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+            uk-slideshow-item="next"></a>
+
+    </div>
 
 </div>
 
 
-<div class="uk-section uk-section-default" style="width: 100%; margin: 0 auto;">
-    <div class="uk-container uk-flex uk-flex-around@l" style="margin: 5% auto">
 
-        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Дизайнерска_Одежда" style="margin: 2% auto; box-shadow: none!important">
-            <div class="card-link Дизайнерска_Одежда" style="box-shadow: none!important">
-                <div class="uk-card uk-card-default  Дизайнерска_Одежда">
-                    <div class="uk-card-body Дизайнерска_Одежда">
-                        <h3 class="uk-text-uppercase uk-text-large@s uk-text-default@l">Дизайнерска Одежда</h3>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Всегда мечтали выделяться из толпы ярким луком?</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto"> Тоогда вы пришли по адресу</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Тут вы сможите найти любой наряд на свой вкус и цвет</p>
-                    </div>
-                    <div class="uk-card-media-bottom Дизайнерска_Одежда">
-                        <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
-                            width="1800" height="1200" alt="">
-                    </div>
-                </div>
+
+<div class="uk-section uk-section-default" style="width: 100%;">
+    <h1 style="color: #0A3644; font-size: 4em;">Заголовок блока</h1>
+    <div class="uk-container uk-flex uk-flex-column" style="margin: 5% auto">
+        <div class="uk-felx uk-flex-around">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <p>1</p>
+                <h3>Дизайнерская одежда</h3>
+                <p>Всегда мечтали выделяться из толпы ярким луком? Тогда вы пришли по адресу. Тут вы сможете найти любой наряд на свой вкус и цвет</p>
             </div>
         </div>
-
-        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Сумки" style="margin: 2% auto; box-shadow: none!important">
-            <div class="card-link Сумки" style="box-shadow: none!important">
-                <div class="Сумки">
-                    <div class="uk-card-body Сумки" style="height: 100%">
-                        <h3 class="uk-text-uppercase uk-text-large@s uk-text-default@l">Сумки</h3>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Не можите подобрать нужную сумку под новый наряд?</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Здесь вы можите найти все, что вам захочется</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Дай волю фантазии и придумаю свою сумку</p>
-                    </div>
-                </div>
-                <div class="uk-card-media-bottom uk-cover-container  Сумки">
-                    <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
-                        width="1800" height="1200" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="uk-container uk-flex uk-flex-around@l uk-margin-remove@m" style="margin: 10% auto">
-
-        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Скульптуры" style="margin: 2% auto; box-shadow: none!important">
-            <div class="card-link Скульптуры" style="box-shadow: none!important">
-                <div class="Скульптуры">
-                    <div class="uk-card-body Скульптуры">
-                        <h3 class="uk-text-uppercase uk-text-large@s uk-text-default@l">Скульптуры</h3>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Всегда мечтали о собственном монумете?</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Тогда скорее заходите в наш раздел с нашими скульпторами и найди
-                            себе
-                            скульптуро по душе</p>
-                    </div>
-                    <div class="uk-card-media-bottom uk-cover-container  Скульптуры">
-                        <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
-                            width="1800" height="1200" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Интерьер" style="margin: 2% auto; box-shadow: none!important">
-            <div class="card-link Интерьер" style="box-shadow: none!important">
-                <div class="uk-card uk-card-default  Интерьер">
-                    <div class="uk-card-body Интерьер">
-                        <h3 class="uk-text-uppercase uk-text-large@s uk-text-default@l">Интерьер</h3>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Хочешь обустроить новую квартиру или комнату?</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Тогда тебе точно сюда!</p>
-                        <p class="uk-text-large@s uk-text-default@l" style="margin: 2px auto">Найди атрибут интерьера на любой вкус и цвет</p>
-
-                    </div>
-                    <div class="uk-card-media-bottom Интерьер">
-                        <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
-                            width="1800" height="1200" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
     </div>
 </div>
 
