--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,4 +1,4 @@
-<div class="uk-visible@l uk-hiddem@l" id="topmenu" style="width: 80%; position: fixed; top: 0; left: 10%; z-index: 1000;">
+<div class="uk-visible@l uk-hiddem@l" id="topmenu" style="width: 80%; position: absolute; top: 0; left: 10%; z-index: 1000;">
     {% include "menusTemplates/largeTemplate.html" %}
 </div>
 
@@ -8,9 +8,12 @@
 
 
 <style>
+    *{
+        font-family: 'Montserrat'!important;
+    }
     svg{
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
     }
 </style>
 
