--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -2,101 +2,7 @@
 
 {% block content %}
 
-<!-- SUB MENU -->
-<div style="width: 80%; margin: auto; margin-top: 7%">
-<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-    <nav class="uk-navbar-container" uk-navbar
-        style="position: relative; z-index: 980; padding: 0 10%; background-color: #f8f8f8 !important; height: 4%;">
 
-        <div class="uk-navbar-left">
-            <ul class="uk-navbar-nav">
-                <li class="uk-active">
-                    {% for item in submenu %}
-                    {% if item.xpos == 'left' and item.position == 'out' %}
-                    <a href="{{item.link}}">{{item.text}}</a>
-                    {% endif %}
-                    {% endfor %}
-                    <div class="uk-navbar-dropdown uk-navbar-dropdown-width-4">
-                        <div class="uk-navbar-dropdown-grid uk-child-width-1-5" uk-grid>
-                            <div>
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    {% for item in submenu %}
-                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "1" %}
-                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
-                                    {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            <div>
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    {% for item in submenu %}
-                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "2" %}
-                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
-                                    {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            <div>
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    {% for item in submenu %}
-                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "3" %}
-                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
-                                    {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            <div>
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    {% for item in submenu %}
-                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "4" %}
-                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
-                                    {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            <div>
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    {% for item in submenu %}
-                                    {% if item.xpos == 'left' and item.position == 'in' and item.link == "5" %}
-                                    <li class="uk-active"><a href="#">{{item.text}}</a></li>
-                                    {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-
-        </div>
-
-        <div class="uk-navbar-center" style="width: 40%; margin: 0 auto; font-size: 25px;">
-
-            <ul class="uk-navbar-nav" style="width: 100%;">
-                <form class="uk-search uk-search-default" style="width: 100%;">
-                    <input class="uk-search-input" type="search" placeholder="Search" style="width: 100%;">
-                </form>
-            </ul>
-
-        </div>
-
-        <div class="uk-navbar-right">
-
-            <ul class="uk-navbar-nav">
-                {% for item in submenu %}
-                {% if item.xpos == 'right' %}
-                <li class="uk-active"><a href="{{item.link}}">{{item.text}}</a></li>
-                {% endif %}
-                {% endfor %}
-            </ul>
-
-        </div>
-
-    </nav>
-</div>
-
-<!-- END SUB MENU -->
-<br>
 <div class="uk-card uk-card-default uk-card-body uk-width-2-3@l" style="margin: 10px auto">
     <container class="container uk-flex uk-flex-around">
         <div class="uk-display-inline-block">
@@ -115,7 +21,8 @@
                     <img src="{{image_user_product.url}}" class="uk-border-circle" style="width: 60px; height: 60px">
                 </div>
                 <div class="uk-width-expand uk-display-inline">
-                    <h3 class="uk-card-title uk-margin-remove-bottom ">{{products.id_creator}}</h3>
+                    <h3 class="uk-card-title uk-margin-remove-bottom ">{{products.id_creator}}
+                    </h3>
                     <div><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
                     </div>
                 </div>
