--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -42,7 +42,7 @@
             <li>
                 <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp"
                     alt="" uk-cover>
-                <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
+                <!-- <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
                     style="margin-left: 30%; ">
 
                     <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
@@ -51,12 +51,12 @@
 
                     <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
                         href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
-                </div>
+                </div> -->
             </li>
             <li>
                 <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp"
                     alt="" uk-cover>
-                <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
+                <!-- <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
                     style="margin-left: 30%; ">
 
                     <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
@@ -66,12 +66,12 @@
 
                     <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
                         href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
-                </div>
+                </div> -->
             </li>
             <li>
                 <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp"
                     alt="" uk-cover>
-                <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
+                <!-- <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
                     style="margin-left: 30%; ">
 
                     <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
@@ -80,7 +80,7 @@
 
                     <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
                         href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
-                </div>
+                </div> -->
             </li>
         </ul>
 
