--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="uk-card uk-card-default uk-card-body uk-width-2-3@l" style="margin: 10px auto">
+<div class="uk-card uk-card-default uk-card-body uk-width-4-5" style="margin: 10% auto 0 auto">
     <container class="container uk-flex uk-flex-around">
         <div class="uk-display-inline-block">
             <img src="{{products.picture.url}}" alt="" width="500">
@@ -33,7 +33,7 @@
                 <div class="uk-flex">
                     <div class="uk-width-auto">
                         <img class="uk-border-circle" width="40" height="40"
-                            src="https://free-png.ru/wp-content/uploads/2021/06/free-png.ru-39-700x700.png">
+                            src="https://free-png.ru/wp-content/webp-express/webp-images/uploads/2022/04/free-png.ru-146-329x340.png.webp">
                     </div>
 
                     <p class="uk-margin-left" style="margin-top: auto; margin-bottom: auto;">Провернный продавец</p>
