--- a/bizopt/BO/templates/goodsSearch.html
+++ b/bizopt/BO/templates/goodsSearch.html
@@ -8,8 +8,8 @@
 
 </head>
 
-<body style="margin: auto; margin-top: 7%">
-<div class="uk-margin-large-left uk-margin-medium-top uk-flex">
+<body>
+<div class="uk-margin-large-left uk-flex" style="margin-top: 10%">
     <div style="width: 20%">
             <div class="uk-margin-small-left">
                 <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
@@ -111,7 +111,7 @@
 
     <br>
     <br>
-        <div id="content" class="row" style="margin-top: 50px" >
+        <div id="content" class="uk-width-3-4" style="margin: 5% auto 0 auto" >
             {% include "baseProductCard.html" %}
 
         </div>
