--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,40 +1,35 @@
 {% for product in products %}
 {% comment %} {% if product.creator_id != user.id %} {% endcomment %}
-<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2 rating_{{ product.rating_status }}" style="margin: 2% auto; width: 80%; margin: auto; margin-top: 7%" uk-grid>
+<div class="uk-card uk-card-default uk-grid-collapse rating_{{ product.rating_status }}" uk-grid>
 
-    <div class="uk-card-media-left uk-cover-container uk-padding">
+    <div class="uk-card-media-left uk-cover-container uk-width-2-3 uk-padding">
         <img src="../../media/{{product.picture}}" width="500" height="180">
     </div>
-    <div>
-        <div class="uk-card-body">
+    <div class="uk-width-1-3">
+        <div class="uk-card-body uk-flex-row">
             <h3 class="uk-card-title uk-text-break">{{ product.product_name }}</h3>
-            <div class="uk-width-1-2">
-                <div class="uk-flex uk-margin-small-bottom">
-                    <span>Срок изготовления:</span>
-                </div>
-                <p class="textSmallInfo uk-border-rounded">От 3х дней</p>
+            <div class="uk-flex uk-margin-small-bottom">
+                <span>Срок изготовления:</span>
             </div>
-            <div>
-                <div class="uk-flex-column-reverse uk-width-1-2">
-                    <p class="uk-margin-small-bottom">Регион:</p>
-                    <p class="textSmallInfo uk-border-rounded">Москва</p>
-                </div>
+            <p class="textSmallInfo uk-border-rounded">От 3х дней</p>
+            <div class="uk-flex-column-reverse">
+                <p class="uk-margin-small-bottom">Регион:</p>
+                <p class="textSmallInfo uk-border-rounded">Москва</p>
             </div>
-            <div>
-                <br>
-                <div class="price">
-                    {{ product.cost }} руб.
-                </div>
+            <br>
+            <div class="price">
+                <label>Цена:</label>
+                <p class="uk-width-1-2 uk-text-center" style="text-align: center; margin: 0 auto; border-bottom: 1px solid gray;">{{ product.cost }} руб.</p>
+            </div>
 
-            </div>
             <br>
             <br>
             {% if request.user.is_authenticated %}
-            <a class="uk-button uk-button-default uk-width-1-2 uk-border-rounded" href="{{ product.id }}"
-                style="background-color:  #2D3995; color: white; ">ПОДРОБНЕЕ</a>
+            <a class="uk-button uk-button-default uk-width-1 uk-border-rounded" href="/creators/goods/{{ product.id }}"
+                style="background-color:  #2D3995; color: white;">ПОДРОБНЕЕ</a>
             {% else %}
-            <a class="uk-button uk-button-default uk-width-1-2 uk-border-rounded" href="/accounts/login/"
-                style="background-color:  #2D3995; color: white; ">ПОДРОБНЕЕ</a>
+            <a class="uk-button uk-button-default uk-width-1 uk-border-rounded" href="/accounts/login/"
+                style="background-color:  #2D3995; color: white;">ПОДРОБНЕЕ</a>
             {% endif %}
         </div>
     </div>
