--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -60,7 +60,7 @@
                                 <p>{{user.email}}</p>
                             </li>
                             <li class="uk-nav-divider"></li>
-                            <li class="uk-active"><a href="/addTask/">Создать задачу</a></li>
+                            <li class="uk-active"><a href="/becomeCreator/">Создать товар</a></li>
                             <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
                             <li class="uk-active"><a href="/logout/">Выйти</a></li>
                         </ul>
@@ -159,13 +159,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a></li>
         </ul>
     </div>
 </div>
@@ -177,13 +171,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a></li>
         </ul>
     </div>
 </div>
@@ -195,13 +183,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a></li>
         </ul>
     </div>
 </div>
@@ -213,13 +195,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a></li>
         </ul>
     </div>
 </div>
@@ -231,13 +207,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Украшения" class="uk-button uk-button-text">Украшения</a></li>
         </ul>
     </div>
 </div>
@@ -249,13 +219,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Скульптуры" class="uk-button uk-button-text">Скульптуры</a></li>
         </ul>
     </div>
 </div>
@@ -267,13 +231,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuL" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Подушки" class="uk-button uk-button-text">Подушки</a></li>
         </ul>
     </div>
 </div>
