--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -34,8 +34,15 @@
                     <p class="uk-text-truncate" uk-tooltip="{{user.email}}">{{user.email}}</p>
                 </div>
                 <div class="uk-width-1 uk-flex uk-flex-middle uk-flex-center">
-                    <a style="margin: 0 5%" uk-tooltip="Партнерка" href="http://seller.befreela.ru/" uk-icon="icon: bag"></a>
+                    <a style="margin: 0 5%" uk-tooltip="Партнерка" href="http://seller.befreela.ru/"
+                        uk-icon="icon: bag"></a>
                     <a style="margin: 0 5%" uk-tooltip="Корзина" href="/orders/" uk-icon="icon: cart"></a>
+                </div>
+                <br>
+                <div class="uk-flex uk-flex-between uk-flex-top">
+                        <a style="color: gray" href="/becomeCreator/">Создать товар</a>
+                        <a style="color: gray" href="/edit/">Настройки профиля</a>
+                        <a style="color: gray" href="/logout/">Выйти</a>
                 </div>
             </li>
 
@@ -177,13 +184,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Дизайнерская одежда"
+                    class="uk-button uk-button-text">Дизайнерская одежда</a></li>
+
         </ul>
     </div>
 </div>
@@ -195,13 +198,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">esigner7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Дизайнерская обувь"
+                    class="uk-button uk-button-text">Дизайнерская обувь</a></li>
+
         </ul>
     </div>
 </div>
@@ -213,13 +212,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">bags7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
+            </li>
+
         </ul>
     </div>
 </div>
@@ -231,13 +226,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">interior7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Интерьер"
+                    class="uk-button uk-button-text">Интерьер</a></li>
+
         </ul>
     </div>
 </div>
@@ -249,13 +240,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">decorations7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Украшения"
+                    class="uk-button uk-button-text">Украшения</a></li>
+
         </ul>
     </div>
 </div>
@@ -267,13 +254,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">sculptures7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Скульптуры"
+                    class="uk-button uk-button-text">Скульптуры</a></li>
+
         </ul>
     </div>
 </div>
@@ -285,13 +268,9 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active" style="padding-left: 90%;"><a href="#main-menuS" class="uk-button uk-button-link"
                     uk-toggle uk-icon="icon: reply"></a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows1</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows2</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows3</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows4</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows5</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows6</a></li>
-            <li class="uk-active"><a href="#" class="uk-button uk-button-text">pillows7</a></li>
+            <li class="uk-active"><a href="/creators/goods/category/Подушки"
+                    class="uk-button uk-button-text">Подушки</a></li>
+
         </ul>
     </div>
 </div>
