--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -33,8 +33,7 @@
     }
 </style>
 
-<div uk-slideshow="animation: push; ratio: 7:3; autoplay: true; pause-on-hover: true; min-height: 300; max-height: 500"
-    style="margin-top: 15%">
+<div uk-slideshow="animation: push; ratio: 7:3; autoplay: true; pause-on-hover: true; min-height: 300; max-height: 500">
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
