--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -5,10 +5,10 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BizOpt</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/6fc980010f.js" crossorigin="anonymous"></script>
 
@@ -150,48 +150,63 @@
             margin-top: 30px;
             margin-bottom: 30px
         }
-
     </style>
 </head>
 
-<body class='snippet-body'>
-<div style="position: fixed; top: 3%; left: 3%; z-index: 1000;">
-    <a class="uk-button uk-button-default" type="button" uk-toggle="target: #offcanvas-overlay" uk-icon="menu"></a>
-</div>
+<body>
+    <div style="position: fixed; top: 3%; left: 3%; z-index: 1000;">
+        <a class="uk-button uk-button-default" type="button" uk-toggle="target: #offcanvas-overlay" uk-icon="menu"></a>
+    </div>
 
 
-<div id="offcanvas-overlay" uk-offcanvas="overlay: true">
-    <div class="uk-offcanvas-bar">
-        <div class="uk-flex-column">
-            <div style="margin: auto; width: 50%" class="uk-margin-medium-bottom">
-                <img src="https://kirox.ru/images/avatar-default.png" style="border-radius: 5 em;">
-            </div>
-            <div style="text-align: center">
-                <p>Игорь Кузнецов</p>
-                <p class="uk-text-muted uk-text-small" >something@mail.ru</p>
-            </div>
+    <div id="offcanvas-overlay" uk-offcanvas="overlay: true">
+        <div class="uk-offcanvas-bar">
+            <div class="uk-flex-column">
+                <div style="margin: auto; width: 50%" class="uk-margin-medium-bottom">
+                    <img src="https://kirox.ru/images/avatar-default.png" style="border-radius: 5 em;">
+                </div>
+                <div style="text-align: center">
+                    <p>Игорь Кузнецов</p>
+                    <p class="uk-text-muted uk-text-small">something@mail.ru</p>
+                </div>
 
-        </div>
-
-        <div class="uk-flex-column">
-            <div class="uk-flex-column uk-margin-medium-top" style="text-align:center">
-                <button class="uk-button uk-button-default uk-margin-bottom" style="background:  #0A3644; width:70%; border: solid #0A3644 2px ">Профиль</button>
-                <button class="uk-button uk-button-default uk-margin-bottom" style="background:  #0A3644; width:70%; border: solid #0A3644 2px ">Информация</button>
             </div>
 
-            <div class="uk-flex-column uk-margin-medium-top" style="text-align:center">
-                <button class="uk-button uk-button-default uk-margin-bottom" style="background:  #B54F00; border: solid #B54F00 2px ; width:70%">Магазин</button>
-                <button class="uk-button uk-button-default uk-margin-bottom" style="background:  #B54F00; border: solid #B54F00 2px; width:70%">Кабинет</button>
-                <button class="uk-button uk-button-default uk-margin-bottom" style="background:  #B54F00; border: solid #B54F00 2px; width:70%">Товары</button>
-            </div>
+            <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
+
+                <li class="uk-active Btn">
+                    <button class="uk-button uk-button-default uk-margin-bottom"
+                        style="background:  #0A3644; width:70%; border: solid #0A3644 2px ">Профиль</button>
+                </li>
+                <li class="uk-active Btn">
+                    <button class="uk-button uk-button-default uk-margin-bottom"
+                        style="background:  #0A3644; width:70%; border: solid #0A3644 2px ">Информация</button>
+                </li>
+                <li class="uk-active Btn">
+                    <button class="uk-button uk-button-default uk-margin-bottom"
+                        style="background:  #B54F00; border: solid #B54F00 2px ; width:70%">Магазин</button>
+                </li>
+                <li class="uk-active Btn">
+                    <button class="uk-button uk-button-default uk-margin-bottom"
+                        style="background:  #B54F00; border: solid #B54F00 2px; width:70%">Кабинет</button>
+                </li>
+                <li class="uk-active Btn">
+                    <button class="uk-button uk-button-default uk-margin-bottom"
+                        style="background:  #B54F00; border: solid #B54F00 2px; width:70%">Товары</button>
+                </li>
+
+            </ul>
 
             <div class="uk-flex-column uk-margin-medium-top" style="text-align:center">
                 <button class="uk-button uk-button-default" style="width:70%">Выйти</button>
             </div>
-        </div>
 
+        </div>
     </div>
-</div>
+
+    
+    <div id="MainWindowContainer" w3-inslude-html="template.html">
+    </div>
 
 
 </body>
@@ -205,7 +220,7 @@
 <script type="text/javascript">
     $(function () {
         var num = window.location.search[1];
-        if ( localStorage.page != null ){
+        if (localStorage.page != null) {
             num = localStorage.page
         } else {
             num = 2;
@@ -216,13 +231,13 @@
             $('#MainWindowContainer').html(xhr.response)
         }
         xhr.send()
-    
+
     });
 
     $('.Btn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
         var index = $(this).index() + 1
-        localStorage.page=index
+        localStorage.page = index
         xhr.open('GET', `becomeCreatorTemplates/${index}/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
@@ -233,7 +248,7 @@
 
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
+    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
 </script>
 
 
@@ -250,6 +265,7 @@
         margin-top: 0;
         padding: 0;
     }
+
     a,
     a:hover,
     a:focus {
