--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -198,13 +198,13 @@
             </ul>
 
             <div class="uk-flex-column uk-margin-medium-top" style="text-align:center">
-                <button class="uk-button uk-button-default" style="width:70%">Выйти</button>
+                <a class="uk-button uk-button-default" style="width:70%" href="/">Выйти</a>
             </div>
 
         </div>
     </div>
 
-    
+
     <div id="MainWindowContainer" w3-inslude-html="template.html">
     </div>
 
